--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,3 +5,5 @@ permalink: /404.html
 ---
 
 Sorry, but the page you were trying to view does not exist.
+
+Go back to the [homepage](https://teslaxi.github.io)
